# feo-math

./: Cargo.toml  README.md
img/: feo-math-logo.xcf
src/: imaginary.rs  lib.rs  polynomial.rs
src/linear_algebra/: matrix3.rs  matrix4.rs  mod.rs  vector3.rs  vector4.rs
src/multivariate/: mod.rs  one_unknown.rs  two_unknown.rs  with_var.rs
src/rotation/: axes.rs  euler.rs  mod.rs  quaternion.rs  rotor.rs
src/utils/: mod.rs  space.rs
